[package]
name = "rustpress"
version = "0.1.0"
edition = "2021"

[dependencies]
walkdir = "2.4.0"           # For filesystem traversal
pulldown-cmark = "0.9.2"    # For Markdown parsing
tera = "1.17.1"             # For templating
serde = { version = "1.0", features = ["derive"] } # For JSON/TOML parsing